cmake_minimum_required(VERSION 3.10)
project(TicketSystem)

set(CMAKE_CXX_STANDARD 17)
#set(CMAKE_CXX_FLAGS "-Ofast -DNDEBUG")
aux_source_directory(src _SOURCE)
aux_source_directory(basic_component _SOURCE)
aux_source_directory(include _SOURCE)
add_executable(code ${_SOURCE})
#add_executable(test test_cpp/Serialization_test.cpp)
